--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -1,12 +1,10 @@
 .btn-treehouse {
-  font-family: Fredoka One, Helvetica, sans-serif;
+  // font-family: Fredoka One, Helvetica, sans-serif;
   background-color: #FF751A;
   font-weight: bold;
-  border-radius: 10px;
+  border-radius: 8px;
   padding: 14px 10px;
   opacity: 0.65;
-  width: 350px;
-  margin: 16px 60px;
   color: white;
   text-align: center;
   text-decoration: none;
