--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,5 +25,8 @@
     <% if params[:controller] == "bookings" && params[:action] == "new" %>
       <%= javascript_pack_tag 'flatpickr' %>
     <% end %>
+    <% if params[:controller] == "dogs" && params[:action] == "index" %>
+      <%= javascript_pack_tag 'search' %>
+    <% end %>
   </body>
 </html>
