--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -1,19 +1,26 @@
 <%= simple_form_for [@booking, @payment] do |f| %>
 
   <div class="form-inputs">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.input :name_card %>
   </div>
 
   <div class="form-inputs">
-    <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    <%= f.input :cc_number %>
   </div>
 
   <div class="form-inputs">
-    <%= f.input :comment %>
+    <%= f.input :expiry_date %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :cvc %>
+  </div>
+
+  <div class="form-inputs">
+    <%= f.input :address_card %>
   </div>
 
   <div class="form-actions btn btn-treehouse">
-    <%= f.button :submit, 'Proceed to pay' %>
+    <%= f.button :submit, 'Confirm to pay' %>
   </div>
 <% end %>
