dog show page styling and pundit for booking

--- a/app/assets/stylesheets/pages/_booking_new.scss
+++ b/app/assets/stylesheets/pages/_booking_new.scss
@@ -2,3 +2,16 @@
 .booked-dog {
   color: #FDA371;
 }
+
+// .form-booking-image {
+//   height: 100%
+// }
+
+.pay-button {
+  display: flex;
+  justify-content: center;
+}
+
+.card-category {
+  // height: 200px;
+}
