--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -1,6 +1,6 @@
 .form-booking-container {
   width: 800px;
-  margin: 0 auto;
+  margin: 50px auto;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
@@ -9,7 +9,7 @@
 }
 
 .form-booking-image {
-  height: 250px;
+  height: 300px;
   width: 350px;
 }
 
@@ -18,13 +18,6 @@
   background-color: white;
   border-radius: 5px;
 }
-
-
-// .card-category {
-//   top: 200px;
-//   width: 200px;
-
-// }
 
 
 .form-flex {
