--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,6 +1,6 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "show";
+@import "dog_show";
 @import "dog_index";
 @import "new";
 @import "container_with_icons";
