--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,18 +1,22 @@
 <%= simple_form_for [dog, booking], html: { data: { dates: dates }} do |f| %>
 
-  <div class="form-inputs">
-    <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  </div>
+  <div class="booking-details">
+    <div class="form-inputs">
+      <%= f.input :start_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
-  </div>
+    <div class="form-inputs">
+      <%= f.input :end_date, as: :string, required: false, input_html: {class: "datepicker"} %>
+    </div>
 
-  <div class="form-inputs">
-    <%= f.input :comment %>
+    <div class="form-inputs">
+      <%= f.input :comment %>
+    </div>
   </div>
-
-  <div class="form-actions btn btn-treehouse">
-    <%= f.button :submit, 'Proceed to pay' %>
+  <br>
+  <div class="pay-button">
+    <div class="form-actions btn btn-treehouse">
+      <%= f.button :submit, 'Proceed to pay' %>
+    </div>
   </div>
 <% end %>
