--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,14 +1,13 @@
 
 <div class="card-category">
   <div class="form-booking-container box">
-    <h1 class='title py-4'>Booking with <span class='booked-dog'><%= @dog.name %></span></h1>
+    <h1 class='title py-4 text-center'>Booking with <span class='booked-dog'><%= @dog.name %></span></h1>
     <div class="d-flex justify-content-around">
       <%= cl_image_tag @dog.photo, crop: :fill, class:"form-booking-image" %>
       <div class="form-booking-input">
         <%= render 'form', booking: @booking, dog: @dog, dates: @dates.to_json %>
       </div>
     </div>
-
     <div class="text-right p-3">
       <%= link_to 'Cancel', dog_path(@dog) %>
     </div>
