--- a/app/assets/stylesheets/pages/_dog_index.scss
+++ b/app/assets/stylesheets/pages/_dog_index.scss
@@ -8,6 +8,13 @@
   grid-gap: 16px;
 }
 
+#map {
+  height: 100vh;
+  position: sticky;
+  top: 0;
+  margin-left: 40px;
+}
+
 
 .card-dog {
   background-size: cover;
@@ -91,10 +98,18 @@
   }
 }
 
+.search-features {
+  // display: flex;
+}
+
 .search-box {
   width: 40%;
 }
 
 .price-range {
   width: 49%;
+}
+
+.noUi-connect {
+  background-color: #ed7e3a !important;
 }
