--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -26,7 +26,7 @@
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #ffffff!important;
+    color: #999494!important;
     opacity: 1; /* Firefox */
     font-size:18px!important;
 }
