--- a/app/views/pages/_search-bar.html.erb
+++ b/app/views/pages/_search-bar.html.erb
@@ -1,23 +1,21 @@
 <%= form_tag dogs_path, method: :get, class:"ml-3", id: "search-form" do %>
   <%= hidden_field_tag(:upper_price, 1, id: :upper_price) %>
   <%= hidden_field_tag(:lower_price, 1, id: :lower_price) %>
-  <div class="d-flex align-items-center">
-    <label for="search", class="mr-3 font-weight-bold">Search:</label>
-    <%= text_field_tag :query,
-      params[:query],
-      class: "form-control search-box",
-      placeholder: "Search "
-    %>
+  <div class="search-features">
+    <div class="scroller d-flex d-row">
+      <label for="search", class="mr-4 font-weight-bold">Price range: </label>
+      <div type="text" id="range" class="price-range"></div>
+      <div id="slider-snap-value-lower"></div>
+      <div id="slider-snap-value-upper"></div>
+    </div>
+    <div class="search-bar mt-5 mb-5 d-flex align-items-center">
+      <label for="search", class="mr-3 font-weight-bold">Search:</label>
+      <%= text_field_tag :query,
+        params[:query],
+        class: "form-control search-box",
+        placeholder: "Breed, location, etc."
+      %>
+    </div>
   </div>
-  <br>
-  <label for="search", class="mr-3 font-weight-bold">Price range: </label>
-  <br>
-  <br>
-  <br>
-  <br>
-  <div type="text" id="range" class="price-range"></div>
-  <div id="slider-snap-value-lower"></div>
-  <div id="slider-snap-value-upper"></div>
-  <br>
 <% end %>
 
