--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,26 +1,29 @@
 
-<div class="container ml-3">
-  <div class="confirmation">
+<div class="container">
+  <div class="row justify-content-center">
 
-      <h2 class="text-center">Congratulations! <%=current_user.first_name %>  </h2>
+      <div class="confirmation">
 
-      <h2 class="text-center">Your booking request has been confirmed</h2>
-    <div class="row">
+         <h2 class="text-center">Congratulations! <%=current_user.first_name %>  </h2>
 
-      <div class="col">
-        <%= cl_image_tag @booking.dog.photo%>
-      </div>
+         <h2 class="text-center">Your booking request has been confirmed</h2>
+       <div class="row">
 
-      <div class="col">
-        <h3>Name: <%= @booking.dog.name %></h3>
-        <h3>Breed: <%= @booking.dog.breed %></h3>
-        <h3>Booking details: <%= @booking.start_date %> <%= @booking.end_date %></h3>
-      </div>
-    </div>
+         <div class="col">
+           <%= cl_image_tag @booking.dog.photo%>
+         </div>
 
-      <%= link_to user_path(@user), class:"link-text" do %>
-        <div class="btn-treehouse">See all my bookings</div>
-      <% end %>
+         <div class="col">
+           <h3>Name: <%= @booking.dog.name %></h3>
+           <h3>Breed: <%= @booking.dog.breed %></h3>
+           <h3>Booking details: <%= @booking.start_date %> <%= @booking.end_date %></h3>
+         </div>
+       </div>
 
+         <%= link_to user_path(@user), class:"link-text" do %>
+           <div class="btn-treehouse">See all my bookings</div>
+         <% end %>
+
+     </div>
   </div>
 </div>
