--- a/app/views/payments/new.html.erb
+++ b/app/views/payments/new.html.erb
@@ -1,10 +1,8 @@
-<div class="new-payment">
-  <h1 class="text-center" style="color: #FF7010;">Please enter payment details.</h1>
+<div class="new-payment new-dog-input">
+  <h1 class="text-center" style="color: #FF7010;">Please enter payment details</h1>
     <%= render 'form', payment: @payment %>
 
 
-    <%= link_to booking_path(@booking), class:"link-text justify-content-center" do %>
-    <div class="btn-treehouse"> Cancel</div>
-    <% end %>
-  </div>
 
+  <div class="btn-cancel new-payment"><%= link_to "Cancel", dogs_path(@dog), class:"link-text"%></div>
+</div>
