--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -47,8 +47,8 @@ position: relative;
   color: #FFF;
   opacity: .8;
   position: absolute;
-  top: -10px;
-  left: 65px;
+  top: 7.5px;
+  left: 75px;
   opacity: .8;
 }
 .add-dog {
@@ -66,4 +66,6 @@ position: relative;
   color: #FFF;
 }
 
-
+#navbarDropdown{
+  color: white;
+}
