--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,78 +1,88 @@
 <div class="profile-container">
   <div class="m-5">
-    <h1 class="text-center">Welcome, <%= @user.first_name.capitalize %>!</h1>
+    <h1 class="text-center welcome-text">Welcome, <%= @user.first_name.capitalize %>!</h1>
   </div>
-  <div class="d-flex justify-content-around">
-    <div class="card" style="width: 300px;">
-      <div class="card-body">
-        <% if @user == current_user %>
-          <h5 class="card-title">Your Profile</h5>
-          <%= cl_image_tag @user.photo, height: 200, width: 230, crop: :fill %>
-          <ul class="list-group list-group-flush">
-            <li class="list-group-item">Name: <%= @user.first_name %> <%= @user.last_name %></li>
-            <li class="list-group-item">Address: <%= @user.address %></li>
-            <li class="list-group-item">Phone Number: <%= @user.phone_number %></li>
-          </ul>
-          <br>
-          <br>
-          <div class="text-center">
-            <%= link_to "Edit Your Profile", edit_user_registration_path, class:"btn-orange-border" %>
 
+  <div class="container">
+    <div class="d-flex justify-content-center">
+
+        <div class="card" style="width: 300px;">
+
+          <div class="card-body">
+            <div class="card-profile">
+              <% if @user == current_user %>
+
+                <h4 class="card-title"><strong>Your Profile</strong></h4>
+
+                  <%= cl_image_tag @user.photo, class: "profile-img", height: 200, width: 200, crop: :fill %>
+
+                <ul class="list-group list-group-flush">
+                  <li class="list-group-item"><strong>Name:</strong> <%= @user.first_name %> <%=  @user.last_name %></li>
+                  <li class="list-group-item"><strong>Address:</strong> <%= @user.address %></li>
+                  <li class="list-group-item"><strong>Phone Number:</strong> <%= @user.phone_number %></li>
+                </ul>
+                <br>
+                <br>
+                <div class="text-center">
+                  <%= link_to "Edit Your Profile", edit_user_registration_path, class:"btn-orange-border" %>
+
+              </div>
+            </div>
+
+              <br>
+              <br>
+              <br>
+
+              <h4 class="card-title"><strong>My bookings:</strong></h4>
+              <% counter = 0 %>
+              <% @bookings_by_user.each do |booking| %>
+                <br>
+                <p><%= counter += 1 %>.</p>
+                <p><strong>Booking for: </strong><%= booking.dog.name %></p>
+                <p><strong>Start Date: </strong><%= booking.start_date %></p>
+                <p><strong>End Date:</strong><%= booking.end_date %></p>
+                <p><strong>Comment: </strong><%= booking.comment%></p>
+                <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } %>
+              <% end %>
+            <% end %>
           </div>
-          <br>
-          <br>
-          <br>
+        </div>
 
-          <h4>My bookings:</h4>
-          <% counter = 0 %>
-          <% @bookings_by_user.each do |booking| %>
-            <br>
-            <p><%= counter += 1 %>.</p>
-            <p><strong>Booking for: </strong><%= booking.dog.name %></p>
-            <p><strong>Start Date: </strong><%= booking.start_date %></p>
-            <p><strong>End Date:</strong><%= booking.end_date %></p>
-            <p><strong>Comment: </strong><%= booking.comment%></p>
-            <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } %>
+        <div class="users-dogs">
+          <% if @user == current_user %>
+            <h3 class='text-center'>Your dog listings:</h3>
+          <% else %>
+            <h3 class='text-center'><%= @user.first_name %>'s dog listings:</h3>
           <% end %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="users-dogs">
-      <% if @user == current_user %>
-        <h3 class='text-center'>Your dog listings:</h3>
-      <% else %>
-        <h3 class='text-center'><%= @user.first_name %>'s dog listings:</h3>
-      <% end %>
-      <div class="cards">
-        <% @user.dogs.each do |dog| %>
-          <div class="card-dog m-3">
-            <%= link_to dog_path(dog), class:"dog-card-link" do %>
-              <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
+          <div class="cards">
+            <% @user.dogs.each do |dog| %>
+              <div class="card-dog m-3">
+                <%= link_to dog_path(dog), class:"dog-card-link" do %>
+                  <div class="photo-dog" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path(dog.photo.url) %>')">
+                  </div>
+                <% end %>
+                <div class="dog-content">
+                  <h1 class="name-dog text-center"><%= dog.name %></h1>
+                  <h2 class="card-dog-pricing">Rate: <%= dog.rate %>£</h2>
+                  <br>
+                  <h2>Bookings:</h2>
+                  <% counter = 0 %>
+                  <% dog.bookings.each do |booking| %>
+                    <div>
+                      <br>
+                      <p><%= counter += 1 %>.</p>
+                      <p><strong>Booking for: </strong><%= booking.user.first_name %></p>
+                      <p><strong>Start Date: </strong><%= booking.start_date %></p>
+                      <p><strong>End Date:</strong><%= booking.end_date %></p>
+                      <p><strong>Comment: </strong><%= booking.comment%></p>
+                      <p><%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?"} %></p>
+                    </div>
+                  <% end %>
+                </div>
               </div>
             <% end %>
-            <div class="dog-content">
-              <h1 class="name-dog text-center"><%= dog.name %></h1>
-              <h2 class="card-dog-pricing">Rate: <%= dog.rate %>£</h2>
-              <br>
-              <h2>Bookings:</h2>
-              <% counter = 0 %>
-              <% dog.bookings.each do |booking| %>
-                <div>
-                  <br>
-                  <p><%= counter += 1 %>.</p>
-                  <p><strong>Booking for: </strong><%= booking.user.first_name %></p>
-                  <p><strong>Start Date: </strong><%= booking.start_date %></p>
-                  <p><strong>End Date:</strong><%= booking.end_date %></p>
-                  <p><strong>Comment: </strong><%= booking.comment%></p>
-                  <p><%= link_to "Cancel", booking_path(booking), method: :delete, data: { confirm: "Are you sure you want to delete this booking?"} %></p>
-                </div>
-              <% end %>
-            </div>
           </div>
-        <% end %>
+        </div>
       </div>
     </div>
   </div>
-</div>
-
