--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -14,12 +14,12 @@
   text-decoration: none !important;
   transition: .2s;
   transform: translateY(3px);
-  box-shadow: 2px 10px 20px rgba(0,0,0,0.2);
+  box-shadow: 2px 10px 20px rgba(1,1,1,0.2);
 }
 
 .btn-treehouse:active{
   transform: translateY(2px);
-  box-shadow: 1px 5px 10px rgba(0,0,0,0.2);
+  box-shadow: 1px 5px 10px rgba(1,1,1,0.2);
 }
 
 .btn-orange-border {
@@ -39,17 +39,38 @@
 }
 
 .btn-signin{
-  position: absolute;
-  top: 40px;
+  position: relative;
+  top: -20px;
+  left: 20px;
 }
 
 .button-owner {
+  font-size: 19px;
+  width: 175px;
+  letter-spacing: 2px;
   position: absolute;
-  left: 30px;
+  font-family: Fredoka One, Helvetica, sans-serif;
+  left: 200px;
+  opacity: .9;
 }
+
 .button-user{
+  font-size: 18px;
+  width: 175px;
+  letter-spacing: 2px;
   position: absolute;
-  left: 400px;
+  font-family: Fredoka One, Helvetica, sans-serif;
+  left: 450px;
+  opacity: .9;
+}
+.button-alldogs{
+  position: absolute;
+  top: - 15px;
+  width: 300px;
+  font-size: 18px;
+  letter-spacing: 2px;
+  font-family: Fredoka One, Helvetica, sans-serif;
+  opacity: .9;
 }
 
 
