--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,7 +4,7 @@
 
       <div class="confirmation">
 
-         <h2 class="text-center">Congratulations! <%=current_user.first_name %>  </h2>
+         <h2 class="text-center">Congratulations! <%=current_user.first_name.capitalize %>  </h2>
 
          <h2 class="text-center">Your booking request has been confirmed</h2>
        <div class="row">
