--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -88,4 +88,9 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.users-dogs {
+
+  background-color: rgba(255,230,208,.5);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+}
 
