--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -12,8 +12,8 @@
 }
 .login_container {
 
-  top: 200px;
-  width: 200px;
+  top: 400px;
+  width: 400px;
 }
 
 .body {
@@ -26,30 +26,38 @@
 }
 
 ::placeholder { /* Chrome, Firefox, Opera, Safari 10.1+ */
-    color: #999494!important;
-    opacity: 1; /* Firefox */
-    font-size:18px!important;
+  color: #999494!important;
+  opacity: 1; /* Firefox */
+  font-size:18px!important;
 }
 .form-login {
-    background-color: rgba(0,0,0,0.55);
-    padding-top: 10px;
-    padding-bottom: 20px;
-    padding-left: 20px;
-    padding-right: 20px;
-    border-radius: 15px;
-    border-color:#d2d2d2;
-    border-width: 5px;
-    box-shadow:0 1px 0 #cfcfcf;
+  background-color: rgba(0,0,0,0.55);
+  font-family: 'Roboto', sans-serif;
+  width: 500px;
+  padding-top: 10px;
+  padding-bottom: 20px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 15px;
+  border-color:#d2d2d2;
+  border-width: 5px;
+  box-shadow:0 1px 0 #cfcfcf;
+  margin-top: 20px;
+}
+
+.form-inputs{
+  font-family: 'Roboto', sans-serif;
+
 }
 .form-control{
-    background:transparent!important;
-    // color:white!important;
-    font-size: 18px!important;
+  background:transparent!important;
+  // color:white!important;
+  font-size: 18px!important;
 }
 
 .btn-outline-secondary{
-    color: white;
-    border-radius: 10px;
+  color: white;
+  border-radius: 10px;
 }
 // h1{
 //     color:white!important;
