changed profile styling

--- a/app/assets/stylesheets/pages/_profile_container.scss
+++ b/app/assets/stylesheets/pages/_profile_container.scss
@@ -8,6 +8,10 @@
 }
 
 .card {
-  border-radius: 5px;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  background-color: none;
+  border-radius: 0 0 0 white;
+}
+
+.my-bookings {
+  border-bottom: 1px solid #FE8238;
 }
