--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -93,4 +93,8 @@
   background-color: rgba(255,230,208,.5);
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
-
+.card-body {
+  border-radius: 5px;
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  margin-right: 40px;
+}
