--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
 
     <div class="d-flex justify-content-center">
 
-        <div class="card" style="width: 300px;">
+        <div class="card-test" style="width: 300px;">
 
           <div class="card-body">
             <div class="card-profile">
@@ -34,15 +34,19 @@
 
               <h4 class="card-title"><strong>My bookings:</strong></h4>
               <% counter = 0 %>
-              <% @bookings_by_user.each do |booking| %>
-                <br>
-                <p><%= counter += 1 %>.</p>
-                <p><strong>Booking for: </strong><%= booking.dog.name %></p>
-                <p><strong>Start Date: </strong><%= booking.start_date %></p>
-                <p><strong>End Date:</strong><%= booking.end_date %></p>
-                <p><strong>Comment: </strong><%= booking.comment%></p>
-                <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } %>
-              <% end %>
+                <% @bookings_by_user.each do |booking| %>
+                  <br>
+                  <p><%= counter += 1 %>.</p>
+                  <p><strong>Booking for: </strong><%= booking.dog.name %></p>
+                  <p><strong>Start Date: </strong><%= booking.start_date %></p>
+                  <p><strong>End Date:</strong><%= booking.end_date %></p>
+                  <p><strong>Comment: </strong><%= booking.comment%></p>
+                  <%= link_to "Cancel", booking_path(booking), method: :delete,data: { confirm: "Are you sure you want to delete this booking?" } %>
+                  <br>
+                    <div class="my-bookings">
+                      <br>
+                    </div>
+                <% end %>
             <% end %>
           </div>
         </div>
@@ -53,7 +57,7 @@
           <% else %>
             <h3 class='text-center'><%= @user.first_name %>'s dog listings:</h3>
           <% end %>
-          <div class="cards">
+          <div class="cards mx-4">
             <% @user.dogs.each do |dog| %>
               <div class="card-dog m-3">
                 <%= link_to dog_path(dog), class:"dog-card-link" do %>
