--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -26,8 +26,7 @@
       </div>
       <div
         id="map"
-        style="width: 40%;
-        height: 100vh;"
+        style="width: 40%;"
         data-markers="<%= @markers.to_json %>"
         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
       >
