--- a/app/views/dogs/edit.html.erb
+++ b/app/views/dogs/edit.html.erb
@@ -1,7 +1,8 @@
 <div class="new-dog-input">
   <h1 style="color: #FF7010;" class="text-center">Edit <%= @dog.name %>'s profile</h1>
   <%= render 'form', dog: @dog %>
+</div>
 
 
-<div class="btn-cancel"><%= link_to "Cancel", dogs_path(@dog), class:"link-text"%></div>
+
 
